# rag-platform

./: .gitignore  README.md  app.py  docker-compose.yml  docker-compose.yml.bak
.github/workflows/: ci.yml
Users/shaya/Downloads/Deep-agents-With-Langchain-fixed/project/: .env.example  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Users/shaya/Downloads/Deep-agents-With-Langchain-fixed/project/app/agents/: builder.py  prompts.py  schemas.py
Users/shaya/Downloads/Deep-agents-With-Langchain-fixed/project/app/export/: exporters.py
Users/shaya/Downloads/Deep-agents-With-Langchain-fixed/project/app/storage/: db.py
Users/shaya/Downloads/Deep-agents-With-Langchain-fixed/project/app/tools/: reflection.py  search.py
Users/shaya/Downloads/rag-platform/: $null  .env.example  README.md  alembic_env.py  fix_final.ps1
Users/shaya/Downloads/rag-platform/api/app/: celery_app.py  config.py
Users/shaya/Downloads/rag-platform/dashboard/: app.py.bak
Users/shaya/Downloads/rag-platform/eval/: dataset.json  ragas_eval.py
api/: Dockerfile  requirements.txt
api/alembic/: env.py
api/app/: main.py
api/app/api/v1/: auth.py  documents.py  health.py
api/app/core/: auth.py  rate_limit.py  security.py
api/app/db/: session.py
api/app/models/: __init__.py  audit_log.py  workspace.py
api/app/routes/: auth.py
api/app/schemas/: auth.py  document.py
api/app/services/: retrieval.py  vector_store.py
api/tests/: test_routes.py
dashboard/: app.py
eval/: requirements.txt
monitoring/: prometheus.yml
worker/: Dockerfile
(+26 files in other folders)
