[project]
name = "deepagentscourse"
version = "0.2.0"
description = "Multi-agent deep research console built on deepagents + LangGraph + Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-google-genai>=2.0.0",
    "langchain-openrouter>=0.2.0",
    "langchain-quickjs>=0.1.4",
    "python-dotenv>=1.2.1",
    "pydantic>=2.7",
    "reportlab>=4.2.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.17",
]
